Added findCommonGroupsForUsers() to simplify finding common AD group membership. We will need to extend /admin to make use of this new endpoint.
